organized css id

--- a/views/employee/employee.ejs
+++ b/views/employee/employee.ejs
@@ -1,6 +1,6 @@
 <div class="container container-body">
 <!-- Button trigger modal -->
-<button type="button" class="btn1" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<button type="button" class="btn-add" data-bs-toggle="modal" data-bs-target="#exampleModal">
  ADD
 </button>
 
