--- a/views/interests/interests.ejs
+++ b/views/interests/interests.ejs
@@ -1,6 +1,6 @@
 <div class="container container-content">
     <!-- Button trigger modal -->
-  <button type="button" class="btn6" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+  <button type="button" class="btn-add" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
     Add +
   </button>
   
@@ -8,12 +8,12 @@
   <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-scrollable">
       <div class="modal-content">
-        <div class="modal-header" id="header-1">
+        <div class="modal-header" id="modal-header">
           <h5 class="modal-title" id="staticBackdropLabel">INTEREST</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <!--- Modal Body -->
-        <div class="modal-body" id="mby2">
+        <div class="modal-body" id="modal-body">
           <select class="form-select" id="loanid" aria-label="Default select example">
             <option selected>Loan ID</option>
              <option value="1">One</option>
@@ -34,8 +34,8 @@
           </div>
            </div>
         </div>
-        <div class="modal-footer" id="footer-2">
-          <button type="button" class="btn8">Submit</button>
+        <div class="modal-footer" id="modal-footer">
+          <button type="button" class="btn-submit">Submit</button>
         </div>
       </div>   
     </div>
@@ -46,7 +46,7 @@
   <div class="search-container" id="searchbar">
     <form>
       <input type="text" placeholder="Search.." name="search" id="searchInput">
-      <button type="submit" class="btn10"><i class="bi bi-search-heart"></i></button>
+      <button type="submit" class="btn-search"><i class="bi bi-search-heart"></i></button>
     </form>
   </div>
   
