--- a/views/topbar.ejs
+++ b/views/topbar.ejs
@@ -12,7 +12,7 @@
             <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
                 aria-label="Search" aria-describedby="basic-addon2">
             <form>
-                <button class="btn11" type="button">
+                <button class="btn-search-topbar" type="button">
                     <i class="bi bi-search-heart"></i>
                 </button>
             </form>
