--- a/public/stylesheets/css/employee.css
+++ b/public/stylesheets/css/employee.css
@@ -154,7 +154,7 @@
     }
 }
 
-/*--------Loan css-----*/
+/*--------Top bar-------*/
 #dp-header {
     background-color: #6456A1 !important;
     border: 2px solid #6456A1 !important;
@@ -163,7 +163,7 @@
     border: 2.5px solid #270050 !important;
     border-radius: 5px;
 }
-.btn11 {
+.btn-search-topbar {
     height: 37px;
     width: 36px;
     padding-left: 8px;
@@ -171,28 +171,89 @@
     background-color: #6456A1 !important;
     color: white !important;
 }
-.btn11:hover {
+.btn-search-topbar:hover {
     background-color: #BDA9D4 !important;
 }
-#content-wrapper {
+
+
+/*---- Sidebar ---*/
+#color-change-5x {
+        -webkit-animation: color-change-5x 8s linear infinite alternate both;
+                animation: color-change-5x 8s linear infinite alternate both;               
+}
+@-webkit-keyframes color-change-5x {
+    0% {
+      background: #19dcea;
+    }
+    25% {
+      background: #b22cff;
+    }
+    50% {
+      background: #ea2222;
+    }
+    75% {
+      background: #f5be10;
+    }
+    100% {
+      background: #3bd80d;
+    }
+  }
+  @keyframes color-change-5x {
+    0% {
+      background: #72087c;
+    }
+    25% {
+      background: #b958f1;
+    }
+    50% {
+      background: #72087c;
+    }
+    75% {
+      background: #680fb1;
+    }
+    100% {
+      background: #72087c;
+    }
+  }
+#boxshadow-sidebar {
     background-color: #F2D8EB !important;
+}
+.collapse .collapse-item {
+    font-weight: 600;
+    color: #270050 !important;
+}
+#brandtext-sidebar {
+    font-weight: 600;
+    color: white !important;
+}
+.nav-item:hover {
+    background-color: #BDA9D4 !important;
+}
+.sidebar-divider {
+    border-bottom: 2px solid white!important;
+}
+
+
+/*--- Dashboard/Content -----*/
+#content-wrapper {
+    background-color: white !important;
 }
 .navbar {
-    background-color: #F2D8EB !important;
-    box-shadow: 0 4px 8px #BDA9D4 !important;
+    background-color: #C084FC;
+    box-shadow: 0 4px 8px #564787 !important;
 }
 .sticky-footer {
-    background-color: #F2D8EB !important;
-    box-shadow: 0 -5px 10px #BDA9D4 !important;
+    background-color: white !important;
+    box-shadow: 0 -5px 10px #E5D1EA !important;
 }
-#footer-00 {
+#footer-label {
     color: #000 !important;
     font-weight: 600;
 }
 .container-content {
     padding-top: 5%;
 }
-.btn6 {
+.btn-add {
     background-color: #6456A1 !important;
     color: white !important;
     font-weight: 600;
@@ -201,11 +262,14 @@
     border-radius: 20px;
     border: 2.5px solid #270050 !important;
 }
-.btn6:hover {
+.btn-add:hover {
     background-color: #BDA9D4 !important;
     color: #270050 !important;
 }
-.modal-dialog #mby2 {
+
+
+/*---- Modal -----*/
+.modal-dialog #modal-body {
     background-color: white !important;
 }
 #employeeid, #loanid {
@@ -249,10 +313,10 @@
 #quantity {
     border: 2.5px solid #270050 !important;
 }
-#footer-2 {
+#modal-footer {
     background-color: #6456A1 !important;
 }
-#header-1 {
+#modal-header {
     color: white !important;
     background-color: #6456A1 !important;
     height: 100px; 
@@ -262,7 +326,7 @@
         -webkit-mask: var(--mask);
                 mask: var(--mask);
 }
-.modal-footer .btn8 {
+.modal-footer .btn-submit {
     background-color: rgb(3, 226, 15) !important;
     border: 3px solid rgb(3, 88, 3) !important;
     border-radius: 4px;
@@ -273,7 +337,7 @@
 }
 
 
-/*------ Loan Searchbar --- */
+/*------ Module Searchbar --- */
 #searchbar {
     float: right;
     border: none;
@@ -283,7 +347,7 @@
     border: 2.5px solid #270050 !important;
     border-radius: 5px;
 }
-.btn10 {
+.btn-search {
     height: 36px;
     border: 2.5px solid #270050 !important;
     background-color: #6456A1 !important;
@@ -293,11 +357,12 @@
     border-radius: 5px;
     font-weight: 600;
 }
-.btn10:hover {
+.btn-search:hover {
     background-color: #BDA9D4 !important;
     color: #270050;
 }
-/*----- Loan Table --- */
+
+/*----- Modules Table --- */
 #table {
     margin-top: 3%;
     width: 100%;
@@ -325,7 +390,8 @@
 .scrollable-table {
     overflow-x: auto;
 }
-/* Media query for smaller screens Loan Table*/
+
+/* Media query for smaller screens Modules Table*/
 @media screen and (max-width: 1000px) {
     #searchInput {
         width: 85px;
@@ -366,26 +432,8 @@
     table td:last-child {
         border-bottom: 0;
     }
-    /*---- Modal -----*/
-    #s-1 {
-        width: 40%;
-    }
 }
 
-#py2 {
-    background-color: #F2D8EB !important;
-}
-.collapse .collapse-item {
-    font-weight: 600;
-    color: #270050 !important;
-}
-#sp-0 {
-    font-weight: 600;
-    color: white !important;
-}
-.nav-item:hover {
-    background-color: #BDA9D4 !important;
-}
 
 
 
