--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -1,15 +1,15 @@
-<ul class="navbar-nav sidebar sidebar-dark accordion" id="accordionSidebar">
+<ul class="navbar-nav sidebar sidebar-dark accordion" id="color-change-5x">
 
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
         <div class="sidebar-brand-icon rotate-n-15">
             <i class='bx bxl-spring-boot' style='color:#11dc2c'></i>
         </div>
-        <div class="sidebar-brand-text mx-3" id="sp-0">SB Admin <sup>2</sup></div>
+        <div class="sidebar-brand-text mx-3" id="brandtext-sidebar">SB Admin <sup>2</sup></div>
     </a>
 
     <!-- Divider -->
-    <hr class="sidebar-divider my-0">
+    <hr class="sidebar-divider my-1">
 
     <!-- Nav Item - Dashboard -->
     <li class="nav-item active">
@@ -17,9 +17,6 @@
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span id="sp-0">Dashboard</span></a>
     </li>
-
-    <!-- Divider -->
-    <hr class="sidebar-divider">
 
     <!-- Heading -->
     <div class="sidebar-heading">
@@ -41,8 +38,8 @@
             <span id="sp-0">Coop</span>
         </a>
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-            data-parent="#accordionSidebar">
-            <div class="py-2 collapse-inner rounded" id="py2">
+            data-parent="#color-change-5x">
+            <div class="py-2 collapse-inner rounded" id="boxshadow-sidebar">
                 <a class="collapse-item" href="/loan">Loan</a>
                 <a class="collapse-item" href="/payments">Payments</a>
                 <a class="collapse-item" href="/interests">Interests</a>
@@ -52,9 +49,6 @@
         </div>
     </li>
 
-   
-    <!-- Divider -->
-    <hr class="sidebar-divider d-none d-md-block">
 
     <!-- Sidebar Toggler (Sidebar) -->
     <div class="text-center d-none d-md-inline">
