--- a/public/stylesheets/css/employee.css
+++ b/public/stylesheets/css/employee.css
@@ -103,12 +103,6 @@
     background-color: rgb(101, 170, 235);
 }
 
-
-/*---Sidebar ---- */
-#accordionSidebar {
-    background-color:#6456A1 !important; 
-}
-
 /*----mediaquery for mobile view----*
 @media screen and (max-width: 767px) {
     .btn5 {
@@ -212,7 +206,7 @@
       background: #680fb1;
     }
     100% {
-      background: #72087c;
+      background: #af64b6;
     }
   }
 #boxshadow-sidebar {
@@ -236,15 +230,15 @@
 
 /*--- Dashboard/Content -----*/
 #content-wrapper {
-    background-color: white !important;
+    background-color: #D9E3E9 !important;
 }
 .navbar {
     background-color: #C084FC;
     box-shadow: 0 4px 8px #564787 !important;
 }
 .sticky-footer {
-    background-color: white !important;
-    box-shadow: 0 -5px 10px #E5D1EA !important;
+    background-color: #D9E3E9 !important;
+    box-shadow: 0 -5px 10px #8fa0aa !important;
 }
 #footer-label {
     color: #000 !important;
@@ -261,7 +255,70 @@
     width: 100px;
     border-radius: 20px;
     border: 2.5px solid #270050 !important;
+    -webkit-animation: btn-add 0.9s both;
+	        animation: btn-add 0.9s both;
 }
+@-webkit-keyframes btn-add {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+            transform: scale3d(1, 1, 1);
+  }
+  30% {
+    -webkit-transform: scale3d(1.25, 0.75, 1);
+            transform: scale3d(1.25, 0.75, 1);
+  }
+  40% {
+    -webkit-transform: scale3d(0.75, 1.25, 1);
+            transform: scale3d(0.75, 1.25, 1);
+  }
+  50% {
+    -webkit-transform: scale3d(1.15, 0.85, 1);
+            transform: scale3d(1.15, 0.85, 1);
+  }
+  65% {
+    -webkit-transform: scale3d(0.95, 1.05, 1);
+            transform: scale3d(0.95, 1.05, 1);
+  }
+  75% {
+    -webkit-transform: scale3d(1.05, 0.95, 1);
+            transform: scale3d(1.05, 0.95, 1);
+  }
+  100% {
+    -webkit-transform: scale3d(1, 1, 1);
+            transform: scale3d(1, 1, 1);
+  }
+}
+@keyframes btn-add {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+            transform: scale3d(1, 1, 1);
+  }
+  30% {
+    -webkit-transform: scale3d(1.25, 0.75, 1);
+            transform: scale3d(1.25, 0.75, 1);
+  }
+  40% {
+    -webkit-transform: scale3d(0.75, 1.25, 1);
+            transform: scale3d(0.75, 1.25, 1);
+  }
+  50% {
+    -webkit-transform: scale3d(1.15, 0.85, 1);
+            transform: scale3d(1.15, 0.85, 1);
+  }
+  65% {
+    -webkit-transform: scale3d(0.95, 1.05, 1);
+            transform: scale3d(0.95, 1.05, 1);
+  }
+  75% {
+    -webkit-transform: scale3d(1.05, 0.95, 1);
+            transform: scale3d(1.05, 0.95, 1);
+  }
+  100% {
+    -webkit-transform: scale3d(1, 1, 1);
+            transform: scale3d(1, 1, 1);
+  }
+}
+
 .btn-add:hover {
     background-color: #BDA9D4 !important;
     color: #270050 !important;
@@ -314,11 +371,47 @@
     border: 2.5px solid #270050 !important;
 }
 #modal-footer {
-    background-color: #6456A1 !important;
+    -webkit-animation: modal-footer 8s linear infinite alternate both;
+    animation: modal-footer 8s linear infinite alternate both; 
 }
+@-webkit-keyframes modal-footer {
+    0% {
+      background: #19dcea;
+    }
+    25% {
+      background: #b22cff;
+    }
+    50% {
+      background: #ea2222;
+    }
+    75% {
+      background: #f5be10;
+    }
+    100% {
+      background: #3bd80d;
+    }
+  }
+  @keyframes modal-footer {
+    0% {
+      background: #72087c;
+    }
+    25% {
+      background: #b958f1;
+    }
+    50% {
+      background: #72087c;
+    }
+    75% {
+      background: #680fb1;
+    }
+    100% {
+      background: #af64b6;
+    }
+  }
 #modal-header {
     color: white !important;
-    background-color: #6456A1 !important;
+    -webkit-animation: modal-header 8s linear infinite alternate both;
+    animation: modal-header 8s linear infinite alternate both; 
     height: 100px; 
         --mask:
           radial-gradient(25.66px at 50% calc(100% - 35.20px),#000 99%,#0000 101%) calc(50% - 44px) 0/88px 100%,
@@ -326,6 +419,40 @@
         -webkit-mask: var(--mask);
                 mask: var(--mask);
 }
+@-webkit-keyframes modal-header {
+    0% {
+      background: #19dcea;
+    }
+    25% {
+      background: #b22cff;
+    }
+    50% {
+      background: #ea2222;
+    }
+    75% {
+      background: #f5be10;
+    }
+    100% {
+      background: #3bd80d;
+    }
+  }
+  @keyframes modal-header {
+    0% {
+      background: #72087c;
+    }
+    25% {
+      background: #b958f1;
+    }
+    50% {
+      background: #72087c;
+    }
+    75% {
+      background: #680fb1;
+    }
+    100% {
+      background: #af64b6;
+    }
+  }
 .modal-footer .btn-submit {
     background-color: rgb(3, 226, 15) !important;
     border: 3px solid rgb(3, 88, 3) !important;
@@ -366,30 +493,82 @@
 #table {
     margin-top: 3%;
     width: 100%;
-    font-size: medium;
+    height: 100%;
+    font-size: 14px;
+    background-color: whitesmoke !important;
+    box-shadow: 2px solid #352b53 !important;
 }
-#table th, #table td {
-    text-align: left;
-    padding: 12px;
-    border: 2.5px solid #270050 !important;
+#table td {
+    width: 100%;
+    text-align: center;
+    padding: 12px;   
+    border: 1px solid rgb(213, 194, 219) !important;
+    color: black;
+}
+#table th {
+    width: 100%;
+    text-align: center;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    
+    -webkit-animation: th 8s linear infinite alternate both;
+    animation: th 8s linear infinite alternate both; 
+    box-shadow: 0 4px 8px #564787 !important;
+}
+@-webkit-keyframes th {
+  0% {
+    background: #19dcea;
+  }
+  25% {
+    background: #b22cff;
+  }
+  50% {
+    background: #ea2222;
+  }
+  75% {
+    background: #f5be10;
+  }
+  100% {
+    background: #3bd80d;
+  }
+}
+@keyframes th {
+  0% {
+    background: #f181fd;
+  }
+  25% {
+    background: #b958f1;
+  }
+  50% {
+    background: #e463f0;
+  }
+  75% {
+    background: #c9a3e6;
+  }
+  100% {
+    background: #e9a3f0;
+  }
 }
 #table tr.header {
     
     background-color: #6456A1 !important;
-    color: white !important;
+    color: black !important;
     font-size:medium;
     font-weight: 600;
     height: 50px;
     width: 100px;
 }
 #table tr:hover {
-    background-color: #BDA9D4 !important;
-    color: #270050 !important;
+    background-color: #f0d6f3 !important;
+    color: black !important;
     font-weight: 600;
 }
 .scrollable-table {
     overflow-x: auto;
 }
+
 
 /* Media query for smaller screens Modules Table*/
 @media screen and (max-width: 1000px) {
