--- a/views/deposit/deposit.ejs
+++ b/views/deposit/deposit.ejs
@@ -58,27 +58,27 @@
   <table id="table">
     <thead>
       <tr class="header">
-        <th scope="g-col-6">ID</th>
-        <th scope="g-col-6">Employee ID</th>
-        <th scope="g-col-6">Date</th>
-        <th scope="g-col-6">Amount</th>
+        <th scope="col">ID</th>
+        <th scope="col">Employee ID</th>
+        <th scope="col">Date</th>
+        <th scope="col">Amount</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td data-label="ID">1</td>
+        <td data-label="ID"><b>1</b></td>
         <td data-label="Employee ID">2014536</td>
         <td data-label="Date">12/25/2024</td>
         <td data-label="Amount">1,000</td>
       </tr>
       <tr>
-        <td data-label="ID">1</td>
+        <td data-label="ID"><b>2</b></td>
         <td data-label="Employee ID">2014536</td>
         <td data-label="Date">12/25/2024</td>
         <td data-label="Amount">1,000</td>
       </tr>
       <tr>
-        <td data-label="ID">1</td>
+        <td data-label="ID"><b>3</b></td>
         <td data-label="Employee ID">2014536</td>
         <td data-label="Date">12/25/2024</td>
         <td data-label="Amount">1,000</td>
