--- a/views/interests/interests.ejs
+++ b/views/interests/interests.ejs
@@ -55,27 +55,27 @@
   <table id="table">
     <thead>
       <tr class="header">
-        <th scope="g-col-6">ID</th>
-        <th scope="g-col-6">Loan ID</th>
-        <th scope="g-col-6">Interest</th>
-        <th scope="g-col-6">Rebate</th>
+        <th scope="col">ID</th>
+        <th scope="col">Loan ID</th>
+        <th scope="col">Interest</th>
+        <th scope="col">Rebate</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td data-label="ID">1</td>
+        <td data-label="ID"><b>1</b></td>
         <td data-label="Loan ID">2014536</td>
         <td data-label="Interest">10%</td>
         <td data-label="Rebate">20,000</td>
       </tr>
       <tr>
-        <td data-label="ID">1</td>
+        <td data-label="ID"><b>2</b></td>
         <td data-label="Loan ID">2014536</td>
         <td data-label="Interest">10%</td>
         <td data-label="Rebate">20,000</td>
       </tr>
       <tr>
-        <td data-label="ID">1</td>
+        <td data-label="ID"><b>3</b></td>
         <td data-label="Loan ID">2014536</td>
         <td data-label="Interest">10%</td>
         <td data-label="Rebate">20,000</td>
