--- a/views/loan/loan.ejs
+++ b/views/loan/loan.ejs
@@ -79,24 +79,24 @@
 <div class="scrollable-table">
 <table id="table">
   <thead>
-    <tr class="header">
-      <th scope="g-col-6">ID</th>
-      <th scope="g-col-6">Employee ID</th>
-      <th scope="g-col-6">Request Date</th>
-      <th scope="g-col-6">Amount</th>
-      <th scope="g-col-6">Interest</th>
-      <th scope="g-col-6">Amount Due</th>
-      <th scope="g-col-6">Date Due</th>
-      <th scope="g-col-6">Period</th>
-      <th scope="g-col-6">Status</th>
-      <th scope="g-col-6">Approved By</th>
-      <th scope="g-col-6">Approved Date</th>
-      <th scope="g-col-6">Purpose</th>
+    <tr>
+      <th scope="col">ID</th>
+      <th scope="col">Employee ID</th>
+      <th scope="col">Request Date</th>
+      <th scope="col">Amount</th>
+      <th scope="col">Interest</th>
+      <th scope="col">Amount Due</th>
+      <th scope="col">Date Due</th>
+      <th scope="col">Period</th>
+      <th scope="col">Status</th>
+      <th scope="col">Approved By</th>
+      <th scope="col">Approved Date</th>
+      <th scope="col">Purpose</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td data-label="ID">1</td>
+      <td data-label="ID"><b>1</b></td>
       <td data-label="Employee ID">2014536</td>
       <td data-label="Request Date">12/25/2024</td>
       <td data-label="Amount">1,000</td>
@@ -110,7 +110,7 @@
       <td data-label="Purpose">Breaking columns lalalaalalalalallalaallaalalalla hahahahahah and so hihihi</td>
     </tr>
     <tr>
-      <td data-label="ID">2</td>
+      <td data-label="ID"><b>2</b></td>
       <td data-label="Employee ID">2014536</td>
       <td data-label="Request Date">12/25/2024</td>
       <td data-label="Amount">1,000</td>
@@ -124,7 +124,77 @@
       <td data-label="Purpose">Pang mcdooooo</td>
     </tr>
     <tr>
-      <td data-label="ID">3</td>
+      <td data-label="ID"><b>3</b></td>
+      <td data-label="Employee ID">2014536</td>
+      <td data-label="Request Date">12/25/2024</td>
+      <td data-label="Amount">1,000</td>
+      <td data-label="Interest">10%</td>
+      <td data-label="Amount Due">20,000</td>
+      <td data-label="Date Due">12/24/2025</td>
+      <td data-label="Period">3</td>
+      <td data-label="Status">Unpaid</td>
+      <td data-label="Approved By">Mark</td>
+      <td data-label="Approved Date">12/20/2023</td>
+      <td data-label="Purpose">Pang mcdooooo</td>
+    </tr>
+    <tr>
+      <td data-label="ID"><b>4</b></td>
+      <td data-label="Employee ID">2014536</td>
+      <td data-label="Request Date">12/25/2024</td>
+      <td data-label="Amount">1,000</td>
+      <td data-label="Interest">10%</td>
+      <td data-label="Amount Due">20,000</td>
+      <td data-label="Date Due">12/24/2025</td>
+      <td data-label="Period">3</td>
+      <td data-label="Status">Unpaid</td>
+      <td data-label="Approved By">Mark</td>
+      <td data-label="Approved Date">12/20/2023</td>
+      <td data-label="Purpose">Pang mcdooooo</td>
+    </tr>
+    <tr>
+      <td data-label="ID"><b>5</b></td>
+      <td data-label="Employee ID">2014536</td>
+      <td data-label="Request Date">12/25/2024</td>
+      <td data-label="Amount">1,000</td>
+      <td data-label="Interest">10%</td>
+      <td data-label="Amount Due">20,000</td>
+      <td data-label="Date Due">12/24/2025</td>
+      <td data-label="Period">3</td>
+      <td data-label="Status">Unpaid</td>
+      <td data-label="Approved By">Mark</td>
+      <td data-label="Approved Date">12/20/2023</td>
+      <td data-label="Purpose">Pang mcdooooo</td>
+    </tr>
+    <tr>
+      <td data-label="ID"><b>6</b></td>
+      <td data-label="Employee ID">2014536</td>
+      <td data-label="Request Date">12/25/2024</td>
+      <td data-label="Amount">1,000</td>
+      <td data-label="Interest">10%</td>
+      <td data-label="Amount Due">20,000</td>
+      <td data-label="Date Due">12/24/2025</td>
+      <td data-label="Period">3</td>
+      <td data-label="Status">Unpaid</td>
+      <td data-label="Approved By">Mark</td>
+      <td data-label="Approved Date">12/20/2023</td>
+      <td data-label="Purpose">Pang mcdooooo</td>
+    </tr>
+    <tr>
+      <td data-label="ID"><b>7</b></td>
+      <td data-label="Employee ID">2014536</td>
+      <td data-label="Request Date">12/25/2024</td>
+      <td data-label="Amount">1,000</td>
+      <td data-label="Interest">10%</td>
+      <td data-label="Amount Due">20,000</td>
+      <td data-label="Date Due">12/24/2025</td>
+      <td data-label="Period">3</td>
+      <td data-label="Status">Unpaid</td>
+      <td data-label="Approved By">Mark</td>
+      <td data-label="Approved Date">12/20/2023</td>
+      <td data-label="Purpose">Pang mcdooooo</td>
+    </tr>
+    <tr>
+      <td data-label="ID"><b>8</b></td>
       <td data-label="Employee ID">2014536</td>
       <td data-label="Request Date">12/25/2024</td>
       <td data-label="Amount">1,000</td>
