--- a/views/member/member.ejs
+++ b/views/member/member.ejs
@@ -70,17 +70,17 @@
   <table id="table">
     <thead>
       <tr class="header">
-        <th scope="g-col-6">ID</th>
-        <th scope="g-col-6">Employee ID</th>
-        <th scope="g-col-6">Date</th>
-        <th scope="g-col-6">Total Deposit</th>
-        <th scope="g-col-6">Total Interest</th>
-        <th scope="g-col-6">Status</th>
+        <th scope="col">ID</th>
+        <th scope="col">Employee ID</th>
+        <th scope="col">Date</th>
+        <th scope="col">Total Deposit</th>
+        <th scope="col">Total Interest</th>
+        <th scope="col">Status</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td data-label="ID">1</td>
+        <td data-label="ID"><b>1</b></td>
         <td data-label="Employee ID">2014536</td>
         <td data-label="Date">12/25/2024</td>
         <td data-label="Total Deposit">1,000</td>
@@ -88,7 +88,7 @@
         <td data-label="Status">Unpaid</td>
       </tr>
       <tr>
-        <td data-label="ID">1</td>
+        <td data-label="ID"><b>2</b></td>
         <td data-label="Employee ID">2014536</td>
         <td data-label="Date">12/25/2024</td>
         <td data-label="Total Deposit">1,000</td>
@@ -96,7 +96,7 @@
         <td data-label="Status">Unpaid</td>
       </tr>
       <tr>
-        <td data-label="ID">1</td>
+        <td data-label="ID"><b>3</b></td>
         <td data-label="Employee ID">2014536</td>
         <td data-label="Date">12/25/2024</td>
         <td data-label="Total Deposit">1,000</td>
