--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -3,9 +3,9 @@
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
         <div class="sidebar-brand-icon rotate-n-15">
-            <i class='bx bxl-spring-boot' style='color:#11dc2c'></i>
+            <i class='bx bxs-spa bx-tada' style='color:#1cd220'></i>
         </div>
-        <div class="sidebar-brand-text mx-3" id="brandtext-sidebar">SB Admin <sup>2</sup></div>
+        <div class="sidebar-brand-text mx-3" id="brandtext-sidebar">SB Admin</div>
     </a>
 
     <!-- Divider -->
