--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -12,10 +12,10 @@
     <hr class="sidebar-divider my-1">
 
     <!-- Nav Item - Dashboard -->
-    <li class="nav-item active">
+    <li class="nav-item">
         <a class="nav-link" href="/">
             <i class="fas fa-fw fa-tachometer-alt"></i>
-            <span id="sp-0">Dashboard</span></a>
+            <span><b>Dashboard</b></span></a>
     </li>
 
     <!-- Heading -->
@@ -27,7 +27,7 @@
     <li class="nav-item">
         <a class="nav-link" href="/employee">
             <i class='bx bxs-user-account'></i>
-            <span id="sp-0">Employee</span></a>
+            <span><b>Employee</b></span></a>
     </li>
 
     <!-- Nav Item - Utilities Collapse Menu -->
@@ -35,7 +35,7 @@
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
             aria-expanded="true" aria-controls="collapseUtilities">
             <i class='bx bx-hive'></i>
-            <span id="sp-0">Coop</span>
+            <span><b>Coop</b></span>
         </a>
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
             data-parent="#color-change-5x">
